logs/finny.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/finny'...
Listing './lib/python3.5/site-packages/finny/boot'...
Listing './lib/python3.5/site-packages/finny/commands'...
Compiling './lib/python3.5/site-packages/finny/commands/generate_runner.py'...
***   File "./lib/python3.5/site-packages/finny/commands/generate_runner.py", line 6
    print "runner"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/finny/commands/generate_structure.py'...
***   File "./lib/python3.5/site-packages/finny/commands/generate_structure.py", line 54
    os.makedirs(self.path, 0755)
                              ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/finny/commands/templates'...
Listing './lib/python3.5/site-packages/finny/commands/templates/config'...
Listing './lib/python3.5/site-packages/finny/commands/templates/endpoint'...
Listing './lib/python3.5/site-packages/finny/commands/templates/initializers'...
Listing './lib/python3.5/site-packages/finny/commands/templates/runners'...
Listing './lib/python3.5/site-packages/finny/env'...
Listing './lib/python3.5/site-packages/finny/tests'...
Listing './lib/python3.5/site-packages/finny/views'...
Listing './lib/python3.5/site-packages/finny-0.3.10.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
